add traslation to Marathi

--- a/whisper_youtube.ipynb
+++ b/whisper_youtube.ipynb
@@ -2,6 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "96kvih9mXkNN"
+      },
       "source": [
         "# **Youtube Videos Transcription with OpenAI's Whisper**\n",
         "\n",
@@ -14,13 +17,23 @@
         "Whisper is a general-purpose speech recognition model. It is trained on a large dataset of diverse audio and is also a multi-task model that can perform multilingual speech recognition as well as speech translation and language identification.\n",
         "\n",
         "This Notebook will guide you through the transcription of a Youtube video using Whisper. You'll be able to explore most inference parameters or use the Notebook as-is to store the transcript and video audio in your Google Drive."
-      ],
-      "metadata": {
-        "id": "96kvih9mXkNN"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "QshUbLqpX7L4"
+      },
+      "outputs": [],
       "source": [
         "#@markdown # **Check GPU type** 🕵️\n",
         "\n",
@@ -41,20 +54,14 @@
         "!nvidia-smi -L\n",
         "\n",
         "!nvidia-smi"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "QshUbLqpX7L4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "IfG0E_WbRFI0",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "IfG0E_WbRFI0"
       },
       "outputs": [],
       "source": [
@@ -85,8 +92,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "1zwGAsr4sIgd",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "1zwGAsr4sIgd"
       },
       "outputs": [],
       "source": [
@@ -109,6 +116,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "TMhrSq_GZ6kA"
+      },
+      "outputs": [],
       "source": [
         "#@markdown # **Model selection** 🧠\n",
         "\n",
@@ -137,16 +150,16 @@
         "    display(Markdown(\n",
         "        f\"**{Model} model is no longer available.**<br /> Please select one of the following:<br /> - {'<br /> - '.join(whisper.available_models())}\"\n",
         "    ))"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "TMhrSq_GZ6kA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "xYLPZQX9S7tU"
+      },
+      "outputs": [],
       "source": [
         "#@markdown # **Video selection** 📺\n",
         "\n",
@@ -203,20 +216,14 @@
         "if video_path_local.suffix == \".mp4\":\n",
         "    video_path_local = video_path_local.with_suffix(\".wav\")\n",
         "    result  = subprocess.run([\"ffmpeg\", \"-i\", str(video_path_local.with_suffix(\".mp4\")), \"-vn\", \"-acodec\", \"pcm_s16le\", \"-ar\", \"16000\", \"-ac\", \"1\", str(video_path_local)])\n"
-      ],
-      "metadata": {
-        "id": "xYLPZQX9S7tU",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "-X0qB9JAzMLY",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "-X0qB9JAzMLY"
       },
       "outputs": [],
       "source": [
@@ -361,12 +368,46 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "Ad6n1m4deAHp"
       },
+      "outputs": [],
+      "source": [
+        "#@markdown # **Parse and translate SRT file** 🏗️\n",
+        "#@markdown \n",
+        "\n",
+        "#@markdown ---\n",
+        "! pip install pysrt\n",
+        "! pip install googletrans==4.0.0rc1\n",
+        "import pysrt\n",
+        "from googletrans import Translator\n",
+        "import os \n",
+        "\n",
+        "subs = pysrt.open(transcript_drive_path)\n",
+        "len(subs)\n",
+        "first_sub = subs[0]\n",
+        "translator = Translator()\n",
+        "translator.translate(first_sub.text, dest='mr').text\n",
+        "from googletrans import Translator\n",
+        "translator = Translator()\n",
+        "for line in range(len(subs)):\n",
+        "  get_line = subs[line].text\n",
+        "  print(get_line)\n",
+        "  translations = translator.translate(get_line, dest='mr')\n",
+        "  subs[line].text = translations.text\n",
+        "translated_filepath = os.path.splitext(transcript_drive_path)[0] + \"_translated.srt\"\n",
+        "\n",
+        "subs.save(translated_filepath)\n",
+        "display(Markdown(f\"**Transcript file created: {translated_filepath}**\"))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -377,11 +418,26 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.4 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.4"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
+      }
     }
   },
   "nbformat": 4,
