--- a/whisper_youtube.ipynb
+++ b/whisper_youtube.ipynb
@@ -399,7 +399,11 @@
         "translated_filepath = os.path.splitext(transcript_drive_path)[0] + \"_translated.srt\"\n",
         "\n",
         "subs.save(translated_filepath)\n",
-        "display(Markdown(f\"**Transcript file created: {translated_filepath}**\"))\n"
+        "display(Markdown(f\"**Transcript file created: {translated_filepath}**\"))\n",
+        "\n",
+        "#@markdown Download video from youtube\n",
+        "video_filepath = os.path.splitext(transcript_drive_path)[0] + \"_video.mp4\"\n",
+        "video_yt.streams.filter(file_extension='mp4').first().download(output_path = video_path_local.parent,filename =video_filepath)\n"
       ]
     },
     {
@@ -407,7 +411,19 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "#@markdown # **Embedd subtitles in video** \n",
+        "#@markdown \n",
+        "# ! pip install ffmpeg-python\n",
+        "# import ffmpeg\n",
+        "# video = ffmpeg.input(video_filepath)\n",
+        "# audio = video.audio\n",
+        "# ffmpeg.concat(video.filter(\"subtitles\", translated_filepath), audio, v=1, a=1).output(\"subtitle_embedded\" + video_filepath).run()\n",
+        "# ffmpeg.input(video_filepath).filter(\"subtitles\", translated_filepath).output(\"subtitle_embedded\" + video_filepath) .run()\n",
+        "\n",
+        "# ! ffmpeg -i video.mp4 -vf \"subtitles=translated.srt:force_style='Fontname=DejaVu Serif,PrimaryColour=&HCCFF0000'\" -c:a copy output.mp4\n",
+        "# ! ffmpeg -i video.mp4 -vf \"subtitles=QUTYxwTsbiM.srt:force_style='Fontname=DejaVu Serif,PrimaryColour=&HCCFF0000'\" -c:a copy output.mp4"
+      ]
     }
   ],
   "metadata": {
