--- a/whisper_youtube.ipynb
+++ b/whisper_youtube.ipynb
@@ -408,7 +408,7 @@
         "\n",
         "#@markdown Download video from youtube\n",
         "video_filepath = os.path.splitext(transcript_drive_path)[0] + \"_video.mp4\"\n",
-        "video_yt.streams.filter(file_extension='mp4').first().download(output_path = video_path_local.parent,filename =video_filepath)\n",
+        "video_yt.streams.filter(file_extension='mp4', progressive = True).first().download(output_path = video_path_local.parent,filename =video_filepath)\n",
         "display(Markdown(f\"**Video file created: {video_filepath}**\"))"
       ]
     },
